Patrick the PM: Fixed TS compilation error in SettingsMenu

--- a/memory/2026-02-10.md
+++ b/memory/2026-02-10.md
@@ -20,3 +20,14 @@ Testing framework: Vitest.
 AI architecture has been refactored to use SOLID principles and a strategy pattern.
 "Magic numbers" have been extracted to `GameConfig.ts`.
 Water is now correctly treated as impassable terrain.
+
+## Bug Fixes #16-20
+- **Bug #16 (Villagers):** Resolved double-decrement logic error in villager dispatch system.
+- **Bug #17 (UI):** Fixed tooltip offset by calculating cursor position relative to the map container.
+- **Bug #18 (UI):** Refactored layout to include a permanent right sidebar for the leaderboard.
+- **Bug #19 (Interaction):** Added `pointer-events-none` to agent renderings to ensure settlements remain clickable.
+- **Bug #20 (UI):** Synced simulation speed slider with the initial config state on refresh.
+
+## Build Policy
+- Always run `npm run build` before pushing to verify type safety and compilation.
+
