--- a/memory/2026-02-13.md
+++ b/memory/2026-02-13.md
@@ -7,13 +7,13 @@
     - **Trade Boons:** Relationship boost upon successful caravan trade.
 - **Goal:** Break the "Miserly Village" stagnation and create dynamic faction interactions.
 
-## Evolution Marathon: Batch 5 Analysis
-- **"Ghost Town" Phenomenon:** In 25,000-tick runs (Gen 165), factions evolve to reach Tier 1 (Town) and hoard wealth (60k+ Gold) but eventually starve to near-zero population (0.0006). High fitness is maintained due to wealth/tier buffs, but growth is stagnant.
-- **Tier 2 Bottleneck:** The 400-population requirement for Tier 2 (City) remains unreached. 
-- **Evolved Constraints:** High `tradeRoiThreshold` (~825) and `provisionDistanceMulti` (~55) prioritize hoarding and local safety over growth and survival through trade.
-- **New Run (Gen 34):** A fresh restart is currently at Generation 34. Showing high mortality (1/3 survivors) and a consistent 100-population ceiling.
+## Evolution Marathon: Batch 6 Results
+- **Status:** Concluded at Gen 200.
+- **Trade Lock:** SUCCESSFULLY BROKEN. `tradeRoiThreshold` evolved down to ~35, making trade functional.
+- **Population:** Still stuck at the ~100 cap. 
+- **Tier 2 Bottleneck:** Confirmed as a physical logistics limitation. Settlements rely too heavily on the center hex for direct food deposits; villagers cannot retrieve remote food piles fast enough to support 400+ population.
+- **Current State:** Simulation is IDLE.
 
 ## Technical Milestones
-- **Priority Summing:** Verified as fully operational in `GOAPPlanner.ts`. Resource gathering priorities are aggregated from multiple settlement desires.
-- **Sovereign AI:** Factions are successfully operating as independent entities with jittered update intervals.
-- **Bug Squashing:** Currently cleaning up villager dispatch and ant-logic edge cases.
+- **Priority Summing:** Verified as fully operational in `GOAPPlanner.ts`.
+- **Logistics Diagnosis:** Identifying that "remote extraction" depositing resources on the ground creates a retrieval bottleneck that limits urban growth.
