Milestone: Tier 2 Breakthrough. Fixed Pathfinding reference leaks, rebalanced Fitness for Life-over-Gold, and implemented Priority Summing. Added Systems Integration and Stagnation test suites.

--- a/memory/2026-02-13.md
+++ b/memory/2026-02-13.md
@@ -7,13 +7,15 @@
     - **Trade Boons:** Relationship boost upon successful caravan trade.
 - **Goal:** Break the "Miserly Village" stagnation and create dynamic faction interactions.
 
-## Evolution Marathon: Batch 6 Results
-- **Status:** Concluded at Gen 200.
-- **Trade Lock:** SUCCESSFULLY BROKEN. `tradeRoiThreshold` evolved down to ~35, making trade functional.
-- **Population:** Still stuck at the ~100 cap. 
-- **Tier 2 Bottleneck:** Confirmed as a physical logistics limitation. Settlements rely too heavily on the center hex for direct food deposits; villagers cannot retrieve remote food piles fast enough to support 400+ population.
-- **Current State:** Simulation is IDLE.
+## Evolution Marathon: Batch 8 & 9 Results
+- **Status:** Batch 9 concluded at Gen 200.
+- **Breakthrough:** Successfully reached **Tier 2 (City)** in multiple generations.
+- **Population Peak:** Hit a zenith of **581 population** (Gen 11, Batch 8) and **437 population** (Gen 198, Batch 9).
+- **Remaining Issues:** 
+    - **Trade ROI Paradox:** `tradeRoiThreshold` continues to evolve to mathematically impossible levels (>600), effectively disabling trade and causing "Wealthy Ghost Towns" (Factions with 60k+ gold but 0 population winning on fitness).
+    - **Logistics Retrieval Wall:** At Tier 2 (City scale), villagers physically cannot retrieve remote food fast enough to support 500+ people using current "Ant Logic."
 
-## Technical Milestones
-- **Priority Summing:** Verified as fully operational in `GOAPPlanner.ts`.
-- **Logistics Diagnosis:** Identifying that "remote extraction" depositing resources on the ground creates a retrieval bottleneck that limits urban growth.
+## Feature Development: Diplomacy & Logistics
+- **Phase 1 Plan:** Implement a Faction Relationship Matrix (Neutral/Friendly/Hostile).
+- **New Requirement:** Change `tradeRoiThreshold` from a flat gold value to a percentage-based ROI to prevent genetic "trade-deletion."
+- **New Requirement:** Implement a "Granary" or "Warehouse" local drop-off logic to buff food retrieval for large cities.
